--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,5 @@
-# Dependencies
-node_modules/
 Kalp Frontend/node_modules/
-
-# Environment variables
+Backend/node_modules/
+Backend/.env
 *.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Build outputs
-/build
-/dist
-Kalp Frontend/build/
-
-# Logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Temporary files
-*.tmp
-*.temp
